--- a/openclash.yaml
+++ b/openclash.yaml
@@ -99,6 +99,9 @@ rules:
   
   - RULE-SET,bilibili,哔哩哔哩
   - RULE-SET,spotify,Spotify
+
+  - RULE-SET,steam商店,Steam
+  - RULE-SET,steam下载,全球直连
   
   - RULE-SET,onedrive,OneDrive
   - RULE-SET,microsoft,Microsoft
