--- a/openclash.yaml
+++ b/openclash.yaml
@@ -102,7 +102,7 @@ rules:
   - RULE-SET,spotify,Spotify
 
   - RULE-SET,steam商店,Steam
-  - RULE-SET,steam下载,全球直连
+  - RULE-SET,steam下载,直连
   
   - RULE-SET,onedrive,OneDrive
   - RULE-SET,microsoft,Microsoft
@@ -125,9 +125,9 @@ rules:
   - RULE-SET,netflix_ip,NETFLIX
   - RULE-SET,telegram_ip,Telegram
   
-  - RULE-SET,geolocation,全球直连
-  - RULE-SET,cn,全球直连
-  - RULE-SET,cn_ip,全球直连
+  - RULE-SET,geolocation,直连
+  - RULE-SET,cn,直连
+  - RULE-SET,cn_ip,直连
   
   - MATCH,规则之外
 
